# gazeqa-artifacts

./: .gitignore  README.md  pyproject.toml  rtm.json
deploy/: Dockerfile.api  Dockerfile.worker  docker-compose.yml  env.example
docs/: architecture.md  authentication_prototype.md  checklist_autoupdate.py  checklist_autoupdate_guide.md  ci_pipeline_and_api_evidence.md  deployment_hetzner.md  evidence_publishing_sync.md  gaze_qa_checklist_v_4.json  gaze_qa_frd_v_4.md  gaze_qa_rtm_v_4.json  gaze_qa_test_case_catalog_v_4.json  observability_dashboard_plan.md  open_ai_computer_use_api_overview_and_how_to.md  rbac_partition_plan.md  rebuild_run_index.md  rtm_execution_plan_v1.md  run_intake_quickstart.md  security_notes.md  team_assignment_plan.md
frd/: FRD.md
gazeqa/: __init__.py  api.py  artifacts.py  audit.py  auth.py  bfs.py  cli.py  crawl.py  discovery.py  exploration.py  langfuse.py  maintenance.py  models.py  observability.py  path_utils.py  run_service.py  security.py  site_map.py  telemetry.py  workflow.py
lovable/: dashboard.html  index.html  styles.css
metrics/: README.md  RUN-1212BF4DDBE2.prom  RUN-ALPHA-001.prom  RUN-ALPHA-EXP-001.prom  RUN-ALPHA-EXP-002.prom  RUN-FR006-009-001.prom  RUN-FR006-009-002.prom  RUN-FR006-009-003.prom  RUN-FR006-009-004.prom  RUN-FR010-UI.prom  RUN-FR014-001.prom  RUN-FR014-EXEC.prom  RUN-FR015-CI.prom
tests/: conftest.py  test_api.py  test_artifacts.py  test_auth.py  test_bfs.py  test_crawl.py  test_discovery.py  test_exploration.py  test_langfuse_integration.py  test_maintenance.py  test_metrics_tool.py  test_secrets.py  (+2 more)
(+156 files in other folders)
